# FaspiCeleryRabbitMqSqlAlchemy

./: README.rst  __main__.py  application.py  containers.py  database.py  endpoints.py  pyproject.toml
models/: People.py  schema.py
repository/: people.py
services/: people.py  people_service.py
tests/: test_celery.py
