[tool.poetry]
name = "celery"
version = "0.1.0"
description = ""
authors = ["turatidavid <davidturati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
fastapi = "^0.71.0"
pip = "^21.3.1"
dependency-injector = "^4.37.0"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
